--- a/style.css
+++ b/style.css
@@ -105,5 +105,15 @@ body{
     margin: 0;
     padding: 0;
     font-size: 16px;
+
+}
+
+.footer a{
+    text-decoration: none;
+    color: white;
+}
+#github-logo{
+    height: 15px;
+    margin: 0 10px;
 }
 
